--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -84,6 +84,7 @@
   },
   "formField": {
     "maxCharacters": {
+      "total": "You can enter up to {number} characters in this field",
       "remaining": {
         "singular": "{number} character left",
         "plural": "{number} characters left"
