--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -104,6 +104,24 @@
     "openMenu": "Open Menu",
     "closeMenu": "Close Menu"
   },
+  "meter": {
+    "bar": {
+      "singular": "Bar meter with value {meterValue} out of {max}",
+      "plural": "Bar meter with values {meterValue} out of {max}"
+    },
+    "circle": {
+      "singular": "Circle meter with value {meterValue} out of {max}",
+      "plural": "Circle meter with values {meterValue} out of {max}"
+    },
+    "pie": {
+      "singular": "Pie meter with value {meterValue} out of {max}",
+      "plural": "Pie meter with values {meterValue} out of {max}"
+    },
+    "semicircle": {
+      "singular": "Semicircle meter with value {meterValue} out of {max}",
+      "plural": "Semicircle meter with values {meterValue} out of {max}"
+    }
+  },
   "pagination": {
     "stepLabel": "Items per page",
     "summary": "Showing {start}-{end} of {total}",
