--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -161,6 +161,9 @@
   "tabs": {
     "tabContents": "Tab Contents"
   },
+  "tag": {
+    "removeLabel": "Remove {name} {value}"
+  },
   "textInput": {
     "enterSelect": "(Press Enter to Select)",
     "suggestionsCount": "suggestions available",
