add aria label for prop to remove button (#7571)
* add aria label for prop to remove button

* add feedback

* add back space

* change name

* Update src/js/components/Tag/Tag.js

Co-authored-by: Taylor Seamans <taylor.seamans@yahoo.com>

* add suggested changes

* add suggestion

* Update MessageContext.js

* add tests and update prop types

* add tests

* update bundlesize

---------

Co-authored-by: Taylor Seamans <taylor.seamans@yahoo.com>
Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -161,6 +161,12 @@
   "tabs": {
     "tabContents": "Tab Contents"
   },
+  "tag": {
+    "removeLabel": {
+      "nameAndValue": "Remove {name}: {value}",
+      "valueOnly": "Remove {value}"
+    }
+  },
   "textInput": {
     "enterSelect": "(Press Enter to Select)",
     "suggestionsCount": "suggestions available",
