Add accessibility support for Avatar component and update snapshots

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -1,4 +1,7 @@
 {
+  "avatar": {
+    "label": "Avatar for {name}"
+  },
   "button": {
     "busy": "button is in a busy state",
     "success": "button action succeeded"
