fix file input 1.1.1

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -80,7 +80,8 @@
       "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
     "remove": "remove",
-    "removeAll": "remove all"
+    "removeAll": "remove all",
+    "removeMaxFileSize": "Error - remove {fileName} (exceeds max file size) {maxSize}."
   },
   "form": {
     "invalid": "invalid",
