Add pinned message for List, DataTableColumns

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -104,6 +104,9 @@
       "validation": "Copied"
     }
   },
+  "list": {
+    "pinned": "Item pinned, order cannot be changed."
+  },
   "menu": {
     "openMenu": "Open Menu",
     "closeMenu": "Close Menu"
