--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -59,7 +59,9 @@
     "open": "Open column selector",
     "order": "Order columns",
     "select": "Select columns",
-    "tip": "Manage columns"
+    "tip": "Manage columns",
+    "selectAria": "Select which columns to show in the data table",
+    "orderAria": "Reorder the visible columns in the data table"
   },
   "dataTableGroupBy": {
     "clear": "Clear group",
