Add messages support and default message for Notification onClose

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -126,6 +126,9 @@
       "plural": "Semicircle meter with values {meterValue} out of {max}"
     }
   },
+  "notification": {
+    "close": "Dismiss notification"
+  },
   "pagination": {
     "stepLabel": "Items per page",
     "summary": "Showing {start}-{end} of {total}",
