Add `message` support for pinned List and DataTableColumns item (#7665)
* Add pinned message for List, DataTableColumns

* Add dataTableColumns specific messsage

* Add to index.d.ts

* Add proptypes

---------

Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -58,6 +58,7 @@
   "dataTableColumns": {
     "open": "Open column selector",
     "order": "Order columns",
+    "pinned": "Column locked, order cannot be changed.",
     "select": "Select columns",
     "tip": "Manage columns"
   },
@@ -103,6 +104,9 @@
       "prompt": "Copy to clipboard",
       "validation": "Copied"
     }
+  },
+  "list": {
+    "pinned": "Item pinned, order cannot be changed."
   },
   "menu": {
     "openMenu": "Open Menu",
