change aria labels for DataTableColumns tabs (#7666)
* change aria labels for tabs

* update types and prop types

---------

Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -60,7 +60,9 @@
     "order": "Order columns",
     "pinned": "Column locked, order cannot be changed.",
     "select": "Select columns",
-    "tip": "Manage columns"
+    "tip": "Manage columns",
+    "selectAria": "Select which columns to show in the data table",
+    "orderAria": "Reorder the visible columns in the data table"
   },
   "dataTableGroupBy": {
     "clear": "Clear group",
