--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -77,13 +77,17 @@
     "dropPromptMultiple": "Drop files here or",
     "files": "files",
     "maxFile": "Attach a maximum of {max} files only.",
+    "remove": "remove file: {fileName}",
+    "removeAll": "remove all",
     "maxSizeSingle": "The file is too large. Select a file no larger than {maxSize}.",
     "maxSizeMultiple": {
       "singular": "One file is too large. Select files which are no larger than {maxSize}.",
       "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
-    "remove": "remove",
-    "removeAll": "remove all"
+    "alert": {
+      "maxSize": "Error - remove file: {fileName} to continue. This file is too large. Attach files which are no larger than {maxSize}.",
+      "maxFile": "Error - remove file: {fileName} to continue.  Attach a maximum of {max} files only."
+    }
   },
   "form": {
     "invalid": "invalid",
