--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -72,22 +72,22 @@
     "label": "View"
   },
   "fileInput": {
+    "alert": {
+      "maxSize": "Attention, this file {fileName} is too large. Attach files which are no larger than {maxSize} to continue.",
+      "maxFile": "Attention, attach a maximum of {max} files only. File {fileName} is beyond this limit."
+    },
     "browse": "browse",
     "dropPrompt": "Drop file here or",
     "dropPromptMultiple": "Drop files here or",
     "files": "files",
     "maxFile": "Attach a maximum of {max} files only.",
-    "remove": "remove file: {fileName}",
-    "removeAll": "remove all",
     "maxSizeSingle": "The file is too large. Select a file no larger than {maxSize}.",
     "maxSizeMultiple": {
       "singular": "One file is too large. Select files which are no larger than {maxSize}.",
       "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
-    "alert": {
-      "maxSize": "Error - remove file: {fileName} to continue. This file is too large. Attach files which are no larger than {maxSize}.",
-      "maxFile": "Error - remove file: {fileName} to continue.  Attach a maximum of {max} files only."
-    }
+    "remove": "remove file: {fileName}",
+    "removeAll": "remove all"
   },
   "form": {
     "invalid": "invalid",
