Add announcement when DataTable rows change

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -55,6 +55,13 @@
     "total": "{total} {items}",
     "totalSingle": "{total} {items}"
   },
+  "dataTable": {
+    "rows": "rows",
+    "rowsSingle": "row",
+    "rowsChanged": "Number of rows changed",
+    "total": "{total} {rows}",
+    "totalSingle": "{total} {rows}"
+  },
   "dataTableColumns": {
     "open": "Open column selector",
     "order": "Order columns",
