Improve search and sort aria support

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -55,6 +55,11 @@
     "total": "{total} {items}",
     "totalSingle": "{total} {items}"
   },
+  "dataTable": {
+    "ascending": "ascending",
+    "descending": "descending",
+    "searchBy": "Open search by {property}"
+  },
   "dataTableColumns": {
     "open": "Open column selector",
     "order": "Order columns",
