--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -74,7 +74,7 @@
   "fileInput": {
     "alert": {
       "maxSize": "Attention, this file {fileName} is too large. Attach files which are no larger than {maxSize} to continue.",
-      "maxFile": "Attention, attach a maximum of {max} files only. File {fileName} is beyond this limit."
+      "maxFile": "Attention, attach a maximum of {maxFile} files only. File {fileName} is beyond this limit."
     },
     "browse": "browse",
     "dropPrompt": "Drop file here or",
