DataTable - Improve search and sort aria support (#7688)
* Improve search and sort aria support

* Add messages prop to DataTable directly

* Use aria-label

* Decouple aria-sort from aria-label

---------

Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -56,9 +56,12 @@
     "totalSingle": "{total} {items}"
   },
   "dataTable": {
+    "ascending": "ascending",
+    "descending": "descending",
     "rows": "rows",
-    "rowsSingle": "row",
     "rowsChanged": "Number of rows changed",
+    "rowsSingle": "row",
+    "searchBy": "Open search by {property}",
     "total": "{total} {rows}",
     "totalSingle": "{total} {rows}"
   },
