--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -86,7 +86,7 @@
       "singular": "One file is too large. Select files which are no larger than {maxSize}.",
       "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
-    "remove": "remove file: {fileName}",
+    "remove": "remove {fileName}",
     "removeAll": "remove all"
   },
   "form": {
