--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -76,11 +76,11 @@
     "dropPrompt": "Drop file here or",
     "dropPromptMultiple": "Drop files here or",
     "files": "files",
-    "maxFile": "Attach a maximum of {max} files only.",
-    "maxSizeSingle": "The file is too large. Select a file no larger than {maxSize}.",
+    "maxFile": "Error, {fileName} exceeds {maxFile} files limit.",
+    "maxSizeSingle": "Error, {fileName} exceeds {maxSize} limit.",
     "maxSizeMultiple": {
-      "singular": "One file is too large. Select files which are no larger than {maxSize}.",
-      "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
+      "singular": "Error, {fileName} exceeds {maxSize} limit.",
+      "plural": "Error, {numOfFiles} files exceed {maxSize} limit."
     },
     "remove": "remove {fileName}",
     "removeAll": "remove all"
