--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -72,15 +72,19 @@
     "label": "View"
   },
   "fileInput": {
+    "alert": {
+      "maxFile": "Error, {fileName} exceeds {maxFile} files limit.",
+      "maxSize": "Error, {fileName} exceeds {maxSize} limit."
+    },
     "browse": "browse",
     "dropPrompt": "Drop file here or",
     "dropPromptMultiple": "Drop files here or",
     "files": "files",
-    "maxFile": "Error, {fileName} exceeds {maxFile} files limit.",
-    "maxSizeSingle": "Error, {fileName} exceeds {maxSize} limit.",
+    "maxFile": "Attach a maximum of {max} files only.",
+    "maxSizeSingle": "The file is too large. Select a file no larger than {maxSize}.",
     "maxSizeMultiple": {
-      "singular": "Error, {fileName} exceeds {maxSize} limit.",
-      "plural": "Error, {numOfFiles} files exceed {maxSize} limit."
+      "singular": "{fileName} file is too large. Select files which are no larger than {maxSize}.",
+      "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
     "remove": "remove {fileName}",
     "removeAll": "remove all"
