--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -58,6 +58,7 @@
   "dataTable": {
     "ascending": "ascending",
     "descending": "descending",
+    "resizerAria": "Resize {headerText} column",
     "rows": "rows",
     "rowsChanged": "Number of rows changed",
     "rowsSingle": "row",
