Fix/a11y file input 1.1.1 v3 (#7679)
* add sr message for alert icon, prop-types and ts-types updates

* update file input message prop

* clean up remove unrelated files

* update formatBytes function fo maxSize unfined or null

* remove circleAlert props not used

* sort file input message props in alpha asc

* rename max to maxFile for clarity

* update alert message to use renamed maxFile variable

* update maxFile variable

* remove circleAlert from tab order

* Update src/js/languages/default.json

Co-authored-by: Taylor Seamans <taylor.seamans@yahoo.com>

* update variable order in asc

* changes for testing with Bill

* remove alert key for file input message and update message content

* 1). restore alert key for file input message 2). update message content 3). expose filename for singular maxSizeMultiple

* add aria-invalid on file input control

* update file input size formatting function to cover more edge cases

* simply guard clause for null and undefined

* improve aria-invalid logic - null/undefined guard check

* update formatBytes function

* check maxSize and max dataType before usage

* fix merge conflict issue

---------

Co-authored-by: Taylor Seamans <taylor.seamans@yahoo.com>
Co-authored-by: Brittany <42451602+britt6612@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -87,6 +87,10 @@
     "label": "View"
   },
   "fileInput": {
+    "alert": {
+      "maxFile": "Error, {fileName} exceeds {maxFile} files limit.",
+      "maxSize": "Error, {fileName} exceeds {maxSize} limit."
+    },
     "browse": "browse",
     "dropPrompt": "Drop file here or",
     "dropPromptMultiple": "Drop files here or",
@@ -94,10 +98,10 @@
     "maxFile": "Attach a maximum of {max} files only.",
     "maxSizeSingle": "The file is too large. Select a file no larger than {maxSize}.",
     "maxSizeMultiple": {
-      "singular": "One file is too large. Select files which are no larger than {maxSize}.",
+      "singular": "{fileName} file is too large. Select files which are no larger than {maxSize}.",
       "plural": "{numOfFiles} files are too large. Select files which are no larger than {maxSize}."
     },
-    "remove": "remove",
+    "remove": "remove {fileName}",
     "removeAll": "remove all"
   },
   "form": {
