DataTable -- Add touch gesture and dragging alternative support (#7714)
* Fix Resizer to support touch events

* Add touch events and drag alternative to resize

* Internationalize

* Temp increase touch target for testing

* Revert test change

* Fix icon imports

* Add global event listeners for touch end and touch move

* setWidth

* Consolidate useEffect and pull functions into callback

* Update src/js/components/DataTable/Resizer.js

Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

---------

Co-authored-by: Jessica Rosenquist <54560994+jcfilben@users.noreply.github.com>

--- a/src/js/languages/default.json
+++ b/src/js/languages/default.json
@@ -59,7 +59,9 @@
     "ascending": "ascending",
     "collapse": "collapse {label}",
     "collapseAll": "collapse all",
+    "decrease": "Decrease {headerText} column width",
     "descending": "descending",
+    "increase": "Increase {headerText} column width",
     "expand": "expand {label}",
     "expandAll": "expand all",
     "resizerAria": "Resize {headerText} column",
